# hyperspectra

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  aviris_atm_correction_v2.py  aviris_isofit_processor.py  cli.py  environment.yml  hyperspectral_viewer_v4.py  pyproject.toml  requirements.txt  verify_atmospheric_correction.py
.github/workflows/: ci.yml
atm_correction/: __init__.py  isofit_processor.py  py6s_processor.py
aviris_tools/: __init__.py  compute.py
aviris_tools/atm_correction/: isofit_processor.py  py6s_processor.py
aviris_tools/indices/: __init__.py  hydrocarbons.py  minerals.py  nitrogen.py  spectral_library.py  utils.py  vegetation.py
aviris_tools/reference_spectra/: usgs_indoor_d2.json
aviris_tools/scripts/: run_isofit_wsl.sh
aviris_tools/scripts/debug/: check_lut.py  debug_clay_values.py  debug_isofit_pipeline.py  (+2 more)
aviris_tools/tests/: test_cli.py  test_hsi_toolkit.py  test_integration.py  test_mineral_indices.py  test_py6s_processor.py  test_usgs_parser.py  test_utils.py  test_validation_groundtruth.py  test_web_engine.py
aviris_tools/utils/: __init__.py  config.py  envi_io.py  memory.py
aviris_tools/viewer/: __init__.py  app.py  data_loader.py  h5_loader.py  main.py  material_matching.py
aviris_tools/web/: __init__.py  app.py  camera_engine.py  camera_worker.py  engine.py  figures.py  layers.py  plotly_3d.py  rois.py  volumetric.py  vtk_3d.py
docs/: hyperspecI_adaptation_notes.md
hsi_toolkit/: __init__.py
hsi_toolkit/atmosphere/: __init__.py  aerosol_scattering.py  atmosphere_simulator.py  gas_absorption.py  rayleigh_scattering.py  solar_spectrum.py
hsi_toolkit/examples/: __init__.py  complete_demo.py
hsi_toolkit/forward_model/: __init__.py  forward_model.py  radiative_transfer.py
hsi_toolkit/sensor/: __init__.py  detector_model.py  grating_dispersion.py  pushbroom_geometry.py  sensor_simulator.py
hsi_toolkit/visualization/: __init__.py  dashboard.py  hsi_visualizer.py
indices/: __init__.py  hydrocarbons.py  nitrogen.py  vegetation.py
legacy_scripts/: aviris_atm_correction_v2.py  validate_l2.py
reference_spectra/: cuprite_minerals.json  usgs_indoor_d1.json  usgs_minerals_d2.json  usgs_parser.py
scripts/debug/: debug_nan_bands.py
tests/: __init__.py  conftest.py  test_atmospheric_correction.py  test_mineral_indices.py  test_spectral_indices.py
viewer/: __init__.py  constants.py  data_loader.py  illumination.py  material_matching.py
viewer/widgets/: spectral_plot.py
(+7 files in other folders)
